I wish I knew how socket works

--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 #MONGO_URL = mongodb+srv://Name:Password.e65cf.mongodb.net/?retryWrites=true&w=majority&appName=MongoDBProjectName/DatabaseName
 
-MONGO_URL = mongodb+srv://Pichanon:Pichanon@battleship.e65cf.mongodb.net/?retryWrites=true&w=majority&appName=Battleship
-#MONGO_URL = mongodb+srv://maipro:maipropassword@cluster0.4p2nb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0/User
+#MONGO_URL = mongodb+srv://Pichanon:Pichanon@battleship.e65cf.mongodb.net/?retryWrites=true&w=majority&appName=Battleship
+MONGO_URL = mongodb+srv://maipro:maipropassword@cluster0.4p2nb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0/User
 #SESSION_SECRET=your-very-secure-random-string
 PORT = 3001
