--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "axios": "^1.7.7",
+        "dotenv": "^16.4.5",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-responsive": "^10.0.0",
@@ -31,6 +32,6 @@
         "globals": "^15.9.0",
         "postcss": "^8.4.47",
         "tailwindcss": "^3.4.14",
-        "vite": "^5.4.9"
+        "vite": "^5.4.10"
     }
 }
